test/users/ssridhar/atomic/arrays/test_whole_array_assign_in_atomic.good
$CHPL_HOME/modules/internal/ChapelDistribution.chpl:175: In function '__tx_clone_destroyArr':
$CHPL_HOME/modules/internal/ChapelDistribution.chpl:183: error: number of actuals does not match number of formals [expr.cpp:510]
