test/users/ssridhar/atomic/arrays/test_whole_array_assign_in_atomic.future
feature request: support recursive functions inside atomic

I believe we were supporting this feature at some point but it 
doesn't seem to work. The problem seems to be with destroyArr method 
in ChapelArray.chpl.

feature request: support whole array assignment inside atomic

I think we are a bit far from supporting this right now. The easier
approach might be to use the serial keyword to serialize things during
execution (since we can easily support the primitives PRIM_GET_SERIAL and
PRIM_SET_SERIAL) but let the compiler skip the task creation and insertion
primitives at compile time. 

